tests/cases/fail/dict_native_values_print.p4
import json

def main() -> None:
    data: dict[str, json.Value] = {
        "name": json.parse("\"py4\"")
    }
    print(data)
